[package]
name = "pinocchio_escrow1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
pinocchio = "0.9.0"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.2"

[dev-dependencies]
solana-sdk = "3.0.0"
mollusk-svm = "0.4.2"
mollusk-svm-bencher = "0.4.2"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
